[package]
name = "callback_icp_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.17"
ic-cdk-timers = "0.11" # Feel free to remove this dependency if you don't need timers
serde = "1.0.219"
serde_bytes = "0.11.17"
serde_json = "1.0.140"
# oc_bots_sdk = { git = "https://github.com/felixkamau/open-chat-bots.git", branch = "main" }
# oc_bots_sdk_offchain = { git = "https://github.com/felixkamau/open-chat-bots.git", branch = "main" }
# getrandom = { version = "0.2", features = ["js"], optional = true }